--- a/lab1.runs/impl_1/usage_statistics_webtalk.html
+++ b/lab1.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2405991</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Feb 15 10:24:57 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Feb 15 12:25:31 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2018.3 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>b764e2e591e8445caaf2df9bb5d1457a</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>4</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>14</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>482c209bf6eb5368a8ecbb690bccd684</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>210779069_174157381_210698700_029</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -21,7 +21,7 @@
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>cpu_name</B></TD><TD>Intel(R) Core(TM) i5-3337U CPU @ 1.80GHz</TD>
-  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1118.194 MHz</TD>
+  <TD BGCOLOR='#DBE5F1'><B>cpu_speed</B></TD><TD>1138.742 MHz</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>os_name</B></TD><TD>Ubuntu</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_release</B></TD><TD>Ubuntu 18.04.2 LTS</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>system_ram</B></TD><TD>8.000 GB</TD>
@@ -32,76 +32,83 @@
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>gui_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>abstractcombinedpanel_remove_selected_elements=11</TD>
+   <TD>abstractsearchablepanel_show_search=1</TD>
    <TD>addsrcwizard_specify_hdl_netlist_block_design=1</TD>
    <TD>addsrcwizard_specify_or_create_constraint_files=1</TD>
-   <TD>basedialog_cancel=5</TD>
-</TR><TR ALIGN='LEFT'>   <TD>basedialog_ok=28</TD>
+</TR><TR ALIGN='LEFT'>   <TD>basedialog_cancel=6</TD>
+   <TD>basedialog_ok=40</TD>
    <TD>boardchooser_board_table=1</TD>
    <TD>constraintschooserpanel_add_files=1</TD>
-   <TD>createsrcfiledialog_file_name=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>createsrcfiledialog_file_type=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>createsrcfiledialog_file_name=3</TD>
+   <TD>createsrcfiledialog_file_type=3</TD>
    <TD>definemodulesdialog_define_modules_and_specify_io_ports=177</TD>
    <TD>definemodulesdialog_entity_name=4</TD>
-   <TD>definemodulesdialog_new_source_files=10</TD>
-</TR><TR ALIGN='LEFT'>   <TD>filesetpanel_file_set_panel_tree=57</TD>
-   <TD>flownavigatortreepanel_flow_navigator_tree=22</TD>
-   <TD>hinputhandler_toggle_line_comments=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>definemodulesdialog_new_source_files=10</TD>
+   <TD>filesetpanel_file_set_panel_tree=60</TD>
+   <TD>flownavigatortreepanel_flow_navigator_tree=39</TD>
+   <TD>hcodeeditor_blank_operations=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>hinputhandler_toggle_line_comments=8</TD>
+   <TD>languagetemplatesdialog_templates_tree=2</TD>
    <TD>mainmenumgr_edit=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_file=6</TD>
-   <TD>mainmenumgr_project=2</TD>
+   <TD>mainmenumgr_file=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>mainmenumgr_project=2</TD>
    <TD>msgtreepanel_message_severity=2</TD>
-   <TD>msgtreepanel_message_view_tree=35</TD>
+   <TD>msgtreepanel_message_view_tree=45</TD>
+   <TD>msgview_critical_warnings=1</TD>
 </TR><TR ALIGN='LEFT'>   <TD>pacodeeditor_goto_definition=1</TD>
    <TD>pacommandnames_auto_connect_target=2</TD>
    <TD>pacommandnames_auto_update_hier=2</TD>
-   <TD>pacommandnames_message_window=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_new_project=1</TD>
-   <TD>pacommandnames_run_bitgen=10</TD>
+   <TD>pacommandnames_language_templates=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_message_window=1</TD>
+   <TD>pacommandnames_new_project=1</TD>
+   <TD>pacommandnames_run_bitgen=24</TD>
    <TD>pacommandnames_set_as_top=1</TD>
-   <TD>pacommandnames_simulation_live_run=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_run_behavioral=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>pacommandnames_simulation_live_run=2</TD>
+   <TD>pacommandnames_simulation_run_behavioral=1</TD>
    <TD>pacommandnames_toggle_view_nav=1</TD>
    <TD>paviews_code=3</TD>
-   <TD>paviews_project_summary=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>planaheadtab_show_flow_navigator=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>paviews_project_summary=4</TD>
+   <TD>planaheadtab_show_flow_navigator=1</TD>
    <TD>programdebugtab_program_device=4</TD>
-   <TD>programfpgadialog_program=2</TD>
-   <TD>programfpgadialog_specify_bitstream_file=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>progressdialog_cancel=1</TD>
+   <TD>programfpgadialog_program=16</TD>
+</TR><TR ALIGN='LEFT'>   <TD>programfpgadialog_specify_bitstream_file=2</TD>
+   <TD>progressdialog_cancel=1</TD>
    <TD>projectnamechooser_choose_project_location=2</TD>
    <TD>projectnamechooser_project_name=1</TD>
-   <TD>rdicommands_save_file=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>rdiviews_waveform_viewer=3</TD>
-   <TD>saveprojectutils_save=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>rdicommands_save_file=7</TD>
+   <TD>rdiviews_waveform_viewer=3</TD>
+   <TD>saveprojectutils_save=8</TD>
    <TD>simulationliverunforcomp_specify_time_and_units=2</TD>
-   <TD>simulationobjectspanel_simulation_objects_tree_table=6</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationscopespanel_simulate_scope_table=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationobjectspanel_simulation_objects_tree_table=6</TD>
+   <TD>simulationscopespanel_simulate_scope_table=6</TD>
    <TD>simulationtab_delete_all_breakpoints=1</TD>
    <TD>srcchooserpanel_add_hdl_and_netlist_files_to_your_project=1</TD>
-   <TD>srcchooserpanel_create_file=3</TD>
-</TR><TR ALIGN='LEFT'>   <TD>srcmenu_ip_hierarchy=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>srcchooserpanel_create_file=3</TD>
+   <TD>srcmenu_ip_hierarchy=1</TD>
    <TD>syntheticagettingstartedview_recent_projects=1</TD>
    <TD>waveformnametree_waveform_name_tree=5</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=2</TD>
+<TR ALIGN='LEFT'>   <TD>addcfgmem=1</TD>
+   <TD>addsources=2</TD>
    <TD>autoconnecttarget=2</TD>
    <TD>editdelete=1</TD>
-   <TD>editpaste=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>editpaste=1</TD>
+   <TD>launchprogramfpga=20</TD>
    <TD>newproject=1</TD>
-   <TD>openhardwaremanager=7</TD>
-   <TD>openrecenttarget=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>programdevice=6</TD>
-   <TD>runbitgen=15</TD>
+   <TD>openhardwaremanager=21</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openrecenttarget=2</TD>
+   <TD>programdevice=20</TD>
+   <TD>runbitgen=27</TD>
    <TD>savefileproxyhandler=3</TD>
-   <TD>settopnode=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>showview=9</TD>
+</TR><TR ALIGN='LEFT'>   <TD>settopnode=1</TD>
+   <TD>showview=10</TD>
    <TD>simulationrun=1</TD>
    <TD>simulationrunfortime=2</TD>
-   <TD>toggleviewnavigator=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskprojectmanager=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>toggleviewnavigator=1</TD>
+   <TD>toolstemplates=1</TD>
+   <TD>viewtaskprojectmanager=3</TD>
 </TR>  </TABLE>
 </TR><TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>other_data</B></TD></TR>
@@ -145,16 +152,16 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=4</TD>
-    <TD>fdre=24</TD>
+    <TD>carry4=3</TD>
+    <TD>fdre=19</TD>
     <TD>gnd=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf=1</TD>
     <TD>lut1=2</TD>
     <TD>lut2=2</TD>
-    <TD>lut3=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=2</TD>
-    <TD>lut5=3</TD>
-    <TD>lut6=8</TD>
+    <TD>lut3=5</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=3</TD>
+    <TD>lut5=1</TD>
+    <TD>lut6=11</TD>
     <TD>obuf=32</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcc=1</TD>
 </TR>   </TABLE>
@@ -163,16 +170,16 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=1</TD>
-    <TD>carry4=4</TD>
-    <TD>fdre=24</TD>
+    <TD>carry4=3</TD>
+    <TD>fdre=19</TD>
     <TD>gnd=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf=1</TD>
     <TD>lut1=2</TD>
     <TD>lut2=2</TD>
-    <TD>lut3=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4=2</TD>
-    <TD>lut5=3</TD>
-    <TD>lut6=8</TD>
+    <TD>lut3=5</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=3</TD>
+    <TD>lut5=1</TD>
+    <TD>lut6=11</TD>
     <TD>obuf=32</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcc=1</TD>
 </TR>   </TABLE>
@@ -260,7 +267,7 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=8to11 (8 to 11 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000575</TD>
+    <TD>clocks=0.000556</TD>
     <TD>confidence_level_clock_activity=Low</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
@@ -269,20 +276,20 @@
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.092943</TD>
+    <TD>devstatic=0.092945</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7z010clg400-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.002473</TD>
+    <TD>dynamic=0.002657</TD>
     <TD>effective_thetaja=11.5</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=zynq</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=none</TD>
-    <TD>i/o=0.001535</TD>
+    <TD>i/o=0.001673</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=26.1 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000184</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000233</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -297,12 +304,12 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtvccaux_voltage=1.800000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.095416</TD>
+    <TD>on-chip_power=0.095602</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=clg400</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.410000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.420000</TD>
     <TD>pct_inputs_defined=100</TD>
     <TD>platform=lin64</TD>
     <TD>process=typical</TD>
@@ -311,7 +318,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.000179</TD>
+    <TD>signals=0.000195</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -328,21 +335,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000053</TD>
+    <TD>vccaux_dynamic_current=0.000058</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
     <TD>vccaux_static_current=0.005297</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.005350</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.005356</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
     <TD>vccbram_static_current=0.000211</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000211</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.001018</TD>
+    <TD>vccint_dynamic_current=0.001064</TD>
     <TD>vccint_static_current=0.003681</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.004698</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.004744</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -364,9 +371,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.000412</TD>
+    <TD>vcco33_dynamic_current=0.000451</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001412</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.001451</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>vcco_ddr_dynamic_current=0.000000</TD>
     <TD>vcco_ddr_static_current=0.000000</TD>
@@ -385,8 +392,8 @@
 </TR><TR ALIGN='LEFT'>    <TD>vccpaux_total_current=0.010330</TD>
     <TD>vccpaux_voltage=1.800000</TD>
     <TD>vccpint_dynamic_current=0.000000</TD>
-    <TD>vccpint_static_current=0.016223</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccpint_total_current=0.016223</TD>
+    <TD>vccpint_static_current=0.016224</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccpint_total_current=0.016224</TD>
     <TD>vccpint_voltage=1.000000</TD>
     <TD>vccpll_dynamic_current=0.000000</TD>
     <TD>vccpll_static_current=0.003000</TD>
@@ -505,9 +512,9 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=1</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=4</TD>
+    <TD>carry4_used=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>fdre_used=24</TD>
+    <TD>fdre_used=19</TD>
     <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
@@ -515,13 +522,13 @@
     <TD>lut2_functional_category=LUT</TD>
     <TD>lut2_used=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=4</TD>
+    <TD>lut3_used=5</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=2</TD>
+    <TD>lut4_used=3</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=3</TD>
+    <TD>lut5_used=1</TD>
     <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=8</TD>
+    <TD>lut6_used=11</TD>
 </TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=32</TD>
 </TR>   </TABLE>
@@ -539,60 +546,56 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=17600</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=16</TD>
-    <TD>lut_as_logic_util_percentage=0.09</TD>
+    <TD>lut_as_logic_used=19</TD>
+    <TD>lut_as_logic_util_percentage=0.11</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=6000</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=35200</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=24</TD>
-    <TD>register_as_flip_flop_util_percentage=0.07</TD>
+    <TD>register_as_flip_flop_used=19</TD>
+    <TD>register_as_flip_flop_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=35200</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=17600</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=16</TD>
-    <TD>slice_luts_util_percentage=0.09</TD>
+    <TD>slice_luts_used=19</TD>
+    <TD>slice_luts_util_percentage=0.11</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=35200</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=24</TD>
-    <TD>slice_registers_util_percentage=0.07</TD>
+    <TD>slice_registers_used=19</TD>
+    <TD>slice_registers_util_percentage=0.05</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=17600</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=16</TD>
-    <TD>lut_as_logic_util_percentage=0.09</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=19</TD>
+    <TD>lut_as_logic_util_percentage=0.11</TD>
     <TD>lut_as_memory_available=6000</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_unused_used=0</TD>
-    <TD>lut_in_front_of_the_register_is_used_fixed=0</TD>
-    <TD>lut_in_front_of_the_register_is_used_used=1</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=1</TD>
-    <TD>register_driven_from_outside_the_slice_used=1</TD>
-    <TD>register_driven_from_within_the_slice_fixed=1</TD>
-    <TD>register_driven_from_within_the_slice_used=23</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=0</TD>
+    <TD>register_driven_from_outside_the_slice_used=0</TD>
+    <TD>register_driven_from_within_the_slice_fixed=0</TD>
+    <TD>register_driven_from_within_the_slice_used=19</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=4400</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=35200</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=24</TD>
-    <TD>slice_registers_util_percentage=0.07</TD>
-    <TD>slice_used=8</TD>
-    <TD>slice_util_percentage=0.18</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=19</TD>
+    <TD>slice_registers_util_percentage=0.05</TD>
+    <TD>slice_used=11</TD>
+    <TD>slice_util_percentage=0.25</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=4</TD>
+    <TD>slicel_used=5</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=4</TD>
+    <TD>slicem_used=6</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=4400</TD>
     <TD>unique_control_sets_fixed=4400</TD>
     <TD>unique_control_sets_used=2</TD>
@@ -602,7 +605,7 @@
     <TD>using_o5_output_only_fixed=5</TD>
     <TD>using_o5_output_only_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
-    <TD>using_o6_output_only_used=11</TD>
+    <TD>using_o6_output_only_used=14</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -687,10 +690,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:21s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:22s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=435.414MB</TD>
-    <TD>memory_peak=1789.645MB</TD>
+    <TD>memory_gain=408.422MB</TD>
+    <TD>memory_peak=1789.910MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
